# UDESA_NEWALLBOTS

./: .gitignore  docker-compose.coolify.yaml  docker-compose.yaml  docker-compose.yml
dataExtractors/epu/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
dataExtractors/epu/src/: analysis_compare_with_benchmarks_with_events_save_to_file.py  epu_bot_workflow.py  epu_historical_GDELT_big_query.py  plots_present.ipynb  plots_results_all_analysis.ipynb  plots_subcategories_compare.ipynb  sentiment_indicator.ipynb  subcategories_proportion_to_base.ipynb  tone_analysis.py
dataExtractors/epu/src/Countries_Media/: countries_media.json
dataExtractors/epu/src/Events_news/: events.json  events_eng_jp.json  events_eng_sum.json
dataExtractors/epu/src/Helpers/: analisys_helpers.py  epu_categories_type.py  gdelt_request_helpers.py  plot_helpers.py
dataExtractors/epu/src/Semantic_distance/: README.md  best_theme_chooser_with_strategy.py  get_best_model_or_strategy.py  get_keyword_dict.py  get_keyword_dict_from_max_similarity.py  semantic_chooser_enum.py  semantic_distance.py  strategies.py
dataExtractors/epu/src/keywords_dicts/: key_words_gdelt_maped_jp.json
dataExtractors/epu/src/keywords_dicts/old/: key_words_gdelt_maped.json  key_words_gdelt_mix.json  key_words_paper.json  key_words_paper_ghirelli.json  key_words_paper_ghirelli_maped.json  key_words_paper_updated.json  map_from_gdelt.py  (+3 more)
dataExtractors/epu/src/old_review/: analysis_compare_dicts_and_media.py  analysis_compare_with_benchmark_by_media.py  analysis_compare_with_benchmark_with_events.py  analysis_vs_benchmarks.py  compare_EPU_from_dicts.py  epu_from_api.py
dataExtractors/epu/tests/: test_helpers.py  test_pipeline.py
dataExtractors/nowcast/: .gitignore  pyproject.toml  readme.md
dataExtractors/nowcast/src/: fetchers.py  nowcast_emae.py  nowcast_fetchers.ipynb
devDashboards/epu/: .gitignore  README.md  dockerfile  entrypoint.sh  pyproject.toml
devDashboards/epu/assets/: legend.js
devDashboards/epu/scripts/: import_excel_to_sqlite.py
devDashboards/epu/src/: db.py  main.py
devDashboards/epu/tests/: test_dashboard.py
devDashboards/nowcast/: README.md  pyproject.toml  requirements.txt
devDashboards/nowcast/src/: main.py  make_nowcast_history_html.py  requirements.txt
docs/: INDEX.md  (+4 more)
(+38 files in other folders)
