[tool.poetry]
name = "epu arg"
version = "0.1.0"
description = "EPU indicator for Argentina"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
google-cloud = "^0.34.0"
google-cloud-bigquery = {extras = ["pandas"], version = "^3.31.0"}
db-dtypes = "^1.4.2"
tqdm = "^4.67.1"
openpyxl = "^3.1.5"
google-cloud-bigquery-storage = "^2.32.0"
pyarrow = "^20.0.0"
plotly = "^6.2.0"
seaborn = "^0.13.2"
sentence-transformers = "^5.0.0"
ace-tools = "^0.0"
adjusttext = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
