[tool.poetry]
name = "nowcast emae"
version = "0.1.0"
description = "Nocast EMAE Centro Estudios Cuantitativos UDESA"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
numpy = "^2.2.6"
scikit-learn = "^1.6.1"
yahoo-finance = "^1.4.0"
pydantic = "^2.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
