[project]
name = "nowcast-plot"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonardo",email = "lgagetti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
package-mode = false
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
